# xmixer

./: Changelog  Makefile.am  README.md  configure.ac
data/: Makefile.am  xmixer.desktop  xmixer.ui
data/icons/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/22x22/apps/: Makefile.am
src/: Makefile.am  alsa.c  alsa.h  config.c  config.h  gsd-media-keys-window.c  msd-osd-window.c  xmixer.c
